# hsc3-process

./: .gitignore  CHANGELOG.md  ChangeLog.md  README.md  hsc3-process.cabal  stack.yaml
Sound/SC3/Server/: Internal.hs  Options.hs  Process.hs  Transport.hs
Sound/SC3/Server/Process/: Accessor.hs  CommandLine.hs  Config.hs  ConfigFile.hs  Make.hs  Options.hs
examples/: config.hs  nrt.hs  scsynth.cfg  sine.hs
