Name:               hsc3-process
Version:            0.8.0
Synopsis:           Create and control scsynth processes
Description:
    This library allows to create and control scsynth processes.
    .
    ChangeLog: <https://github.com/kaoskorobase/hsc3-process/blob/master/ChangeLog.md>
License:            GPL
License-File:       LICENSE
Category:           Sound
Copyright:          Copyright (c) Stefan Kersten and others 2008-2012
Author:             Stefan Kersten
Maintainer:         kaoskorobase@gmail.com
Homepage:           https://github.com/kaoskorobase/hsc3-process
Tested-With:        GHC == 7.4
Build-Type:         Simple
Cabal-Version:      >= 1.6

Extra-Source-Files: examples/config.hs
                    examples/scsynth.cfg
                    examples/sine.hs

Library
  Exposed-Modules:  Sound.SC3.Server.Process
                    Sound.SC3.Server.Process.CommandLine
                    Sound.SC3.Server.Process.Options

  Build-Depends:    base >= 3 && < 5
                  , bytestring >= 0.8 && < 0.11
                  , containers >= 0.2 && < 0.6
                  , hosc >= 0.12
                  , hsc3 >= 0.12
                  , process >= 1.0 && < 1.2
                  , transformers >= 0.2 && < 0.4

  Ghc-Options:      -W
 
Source-Repository head
  Type:             git
  Location:         git://github.com/kaoskorobase/hsc3-process.git
